Ignore build directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,53 @@
 /nbproject/private/
+/build/
+/DesktopBranding/build/
+/GoBeanAPI/build/
+/GeneIDConverterAPI/build/
+/PathwayEnrichmentAnalysis/build/
+/BatikLibrary/build/
+/EPSGraphicsLibrary/build/
+/ColtLibrary/build/
+/HeatMapLibrary/build/
+/FlamingoLibrary/build/
+/JavaCSVLibrary/build/
+/LuceneLibrary/build/
+/PrefuseLibrary/build/
+/SwingXLibrary/build/
+/WidgetsLibrary/build/
+/ValidationAPI/build/
+/LongTaskAPI/build/
+/VisualizationAPI/build/
+/ExportAPI/build/
+/DataTableAPI/build/
+/VisualItemEditorAPI/build/
+/VisualItemEditorUI/build/
+/LayoutUI/build/
+/LayoutAPI/build/
+/ExportPlugins/build/
+/KOPathDatabaseAPI/build/
+/KOPathVisualizationAPI/build/
+/ClusteringAPI/build/
+/OverviewUI/build/
+/ContextUI/build/
+/ClusteringPlugins/build/
+/ClusteringUI/build/
+/PerspectiveAPI/build/
+/PerspectiveUI/build/
+/ExportUI/build/
+/PipelineUI/build/
+/LayoutPlugins/build/
+/ImportAPI/build/
+/SeriesDataAPI/build/
+/ImportPlugins/build/
+/SeriesDataUI/build/
+/ImportUI/build/
+/DataTableUI/build/
+/VisualizationUI/build/
+/EnrichmentAnalysisAPI/build/
+/EnrichmentAnalysisUI/build/
+/KOPathVisualizationUI/build/
+/GOEnrichmentAnalysis/build/
+/VisualMappingAPI/build/
+/VisualMappingPlugins/build/
+/VisualMappingUI/build/
+/JUnit4Library/build/
