--- a/KOPathVisualizationUI/src/org/mongkie/ui/kopath/Bundle.properties
+++ b/KOPathVisualizationUI/src/org/mongkie/ui/kopath/Bundle.properties
@@ -24,4 +24,4 @@ PathwaySearchTopComponent.clearButton.text=Clear
 PathwaySearchTopComponent.searchResult.rootNode.displayName=Search results ({0})
 PathwaySearchTopComponent.searchFinished.statusText=Total {0} pathways are found.
 PathwaySearchTopComponent.bannerLabel.text=Total {0} pathways are found.
-PathwayDisplayTopComponent.initializingLabel.text=Initializing..
+PathwayDisplayTopComponent.initializingLabel.text=Initializing...
