--- a/VisualizationUI/src/org/mongkie/ui/visualization/Bundle.properties
+++ b/VisualizationUI/src/org/mongkie/ui/visualization/Bundle.properties
@@ -4,4 +4,4 @@ HINT_DisplayTopComponent=This is a network display window
 OpenIDE-Module-Display-Category=Mongkie Core UI
 OpenIDE-Module-Name=Visualization UI
 OpenIDE-Module-Short-Description=Core desktop UI for network display
-DisplayTopComponent.initializingLabel.text=Initializing..
+DisplayTopComponent.initializingLabel.text=Initializing...
