Add new column data action is added And refresh DataNode on table column changed

--- a/GoBeanAPI/src/org/mongkie/gobean/rest/GoBeanService.properties
+++ b/GoBeanAPI/src/org/mongkie/gobean/rest/GoBeanService.properties
@@ -15,7 +15,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 #baseUri=http://mongkie.org:8080/GoBeanApiServer/resources
-#baseUri=http://api.mongkie.org
+baseUri=http://api.mongkie.org
 #baseUri=http://hipathdb.kobic.re.kr:8084/GoBeanApiServer/resources
-baseUri=http://hipathdb.kobic.re.kr
+#baseUri=http://hipathdb.kobic.re.kr
 path=gobean
