Change milestone version to 0.2.1 Issue #RND-89 - Mongkie Development

--- a/branding/core/core.jar/org/netbeans/core/startup/Bundle.properties
+++ b/branding/core/core.jar/org/netbeans/core/startup/Bundle.properties
@@ -1,5 +1,5 @@
-currentVersion=Mongkie 0.1Alpha
-LBL_splash_window_title=Starting Mongkie
+currentVersion=Mongkie 0.2.1
+LBL_splash_window_title=Starting Mongkie 0.2.1
 SPLASH_HEIGHT=303
 SPLASH_WIDTH=477
 SplashProgressBarBounds=0,217,477,6
