--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,6 @@
 app.icon=branding/core/core.jar/org/netbeans/core/startup/frame48.gif
 app.name=mongkie
-app.title=Mongkie
+app.title=Mongkie 0.2.1
 auxiliary.org-netbeans-modules-apisupport-installer.license-file=agpl-3.0.txt
 auxiliary.org-netbeans-modules-apisupport-installer.os-linux=true
 auxiliary.org-netbeans-modules-apisupport-installer.os-macosx=true
