Change milestone version to 0.2Alpha

--- a/branding/modules/org-netbeans-core-windows.jar/org/netbeans/core/windows/view/ui/Bundle.properties
+++ b/branding/modules/org-netbeans-core-windows.jar/org/netbeans/core/windows/view/ui/Bundle.properties
@@ -1,2 +1,2 @@
-CTL_MainWindow_Title=Mongkie 0.2.1
-CTL_MainWindow_Title_No_Project=Mongkie 0.2.1
+CTL_MainWindow_Title=Mongkie 0.2Alpha
+CTL_MainWindow_Title_No_Project=Mongkie 0.2Alpha
