Update to NetBeans 7.2

--- a/nbproject/platform.properties
+++ b/nbproject/platform.properties
@@ -1,3 +1,4 @@
+branding.token=mongkie
 cluster.path=\
     ${nbplatform.active.dir}/enterprise:\
     ${nbplatform.active.dir}/ide:\
@@ -33,6 +34,7 @@ disabled.modules=\
     org.mozilla.rhino.patched,\
     org.netbeans.api.debugger,\
     org.netbeans.api.java.classpath,\
+    org.netbeans.api.search,\
     org.netbeans.api.visual,\
     org.netbeans.api.web.webmodule,\
     org.netbeans.api.xml,\
@@ -42,10 +44,11 @@ disabled.modules=\
     org.netbeans.core.io.ui,\
     org.netbeans.core.multiview,\
     org.netbeans.core.nativeaccess,\
+    org.netbeans.core.netigso,\
     org.netbeans.core.osgi,\
     org.netbeans.core.output2,\
-    org.netbeans.lib.cvsclient,\
     org.netbeans.lib.terminalemulator,\
+    org.netbeans.libs.amazon,\
     org.netbeans.libs.antlr3.runtime,\
     org.netbeans.libs.bytelist,\
     org.netbeans.libs.commons_fileupload,\
@@ -59,6 +62,7 @@ disabled.modules=\
     org.netbeans.libs.jsr223,\
     org.netbeans.libs.jvyamlb,\
     org.netbeans.libs.lucene,\
+    org.netbeans.libs.osgi,\
     org.netbeans.libs.smack,\
     org.netbeans.libs.svnClientAdapter,\
     org.netbeans.libs.svnClientAdapter.javahl,\
@@ -72,6 +76,9 @@ disabled.modules=\
     org.netbeans.modules.bugtracking,\
     org.netbeans.modules.bugtracking.bridge,\
     org.netbeans.modules.bugzilla,\
+    org.netbeans.modules.cloud.amazon,\
+    org.netbeans.modules.cloud.common,\
+    org.netbeans.modules.code.analysis,\
     org.netbeans.modules.core.kit,\
     org.netbeans.modules.csl.api,\
     org.netbeans.modules.css.editor,\
@@ -102,6 +109,7 @@ disabled.modules=\
     org.netbeans.modules.editor.errorstripe,\
     org.netbeans.modules.editor.errorstripe.api,\
     org.netbeans.modules.editor.fold,\
+    org.netbeans.modules.editor.global.format,\
     org.netbeans.modules.editor.guards,\
     org.netbeans.modules.editor.indent,\
     org.netbeans.modules.editor.indent.project,\
@@ -112,6 +120,7 @@ disabled.modules=\
     org.netbeans.modules.editor.mimelookup.impl,\
     org.netbeans.modules.editor.plain,\
     org.netbeans.modules.editor.plain.lib,\
+    org.netbeans.modules.editor.search,\
     org.netbeans.modules.editor.settings,\
     org.netbeans.modules.editor.settings.storage,\
     org.netbeans.modules.editor.structure,\
@@ -187,18 +196,22 @@ disabled.modules=\
     org.netbeans.modules.lexer,\
     org.netbeans.modules.lexer.nbbridge,\
     org.netbeans.modules.localhistory,\
+    org.netbeans.modules.masterfs.solaris,\
     org.netbeans.modules.maven.j2ee,\
     org.netbeans.modules.maven.jaxws,\
     org.netbeans.modules.maven.samples,\
     org.netbeans.modules.mercurial,\
+    org.netbeans.modules.netbinox,\
     org.netbeans.modules.options.editor,\
     org.netbeans.modules.options.keymap,\
     org.netbeans.modules.parsing.api,\
     org.netbeans.modules.parsing.lucene,\
+    org.netbeans.modules.parsing.ui,\
     org.netbeans.modules.print,\
     org.netbeans.modules.print.editor,\
     org.netbeans.modules.profiler.j2ee,\
     org.netbeans.modules.project.ant,\
+    org.netbeans.modules.project.indexingbridge,\
     org.netbeans.modules.project.libraries,\
     org.netbeans.modules.projectapi,\
     org.netbeans.modules.projectimport.eclipse.web,\
@@ -234,12 +247,13 @@ disabled.modules=\
     org.netbeans.modules.utilities,\
     org.netbeans.modules.utilities.project,\
     org.netbeans.modules.versioning,\
+    org.netbeans.modules.versioning.core,\
     org.netbeans.modules.versioning.indexingbridge,\
+    org.netbeans.modules.versioning.masterfs,\
     org.netbeans.modules.versioning.system.cvss.installer,\
+    org.netbeans.modules.versioning.ui,\
     org.netbeans.modules.versioning.util,\
     org.netbeans.modules.web.beans,\
-    org.netbeans.modules.web.client.javascript.debugger.ant,\
-    org.netbeans.modules.web.client.tools.api,\
     org.netbeans.modules.web.common,\
     org.netbeans.modules.web.core,\
     org.netbeans.modules.web.core.syntax,\
@@ -291,7 +305,6 @@ disabled.modules=\
     org.netbeans.modules.websvc.websvcapi,\
     org.netbeans.modules.websvc.wsitconf,\
     org.netbeans.modules.websvc.wsitmodelext,\
-    org.netbeans.modules.websvc.wsstack.jaxws,\
     org.netbeans.modules.websvc.wsstackapi,\
     org.netbeans.modules.xml,\
     org.netbeans.modules.xml.axi,\
