--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,5 @@
 app.icon=branding/core/core.jar/org/netbeans/core/startup/frame48.gif
-app.name=mongkie
+app.name=${branding.token}
 app.title=Mongkie 0.2Alpha
 auxiliary.org-netbeans-modules-apisupport-installer.license-file=agpl-3.0.txt
 auxiliary.org-netbeans-modules-apisupport-installer.os-linux=true
@@ -7,7 +7,6 @@ auxiliary.org-netbeans-modules-apisupport-installer.os-macosx=true
 auxiliary.org-netbeans-modules-apisupport-installer.os-solaris=false
 auxiliary.org-netbeans-modules-apisupport-installer.os-windows=true
 auxiliary.org-netbeans-modules-apisupport-installer.pack200-enabled=true
-branding.token=${app.name}
 modules=\
     ${project.org.mongkie.lib.epsgraphics}:\
     ${project.org.mongkie.ui.visualization}:\
