Add UIs for controlling each interaction source

--- a/InteractionManagerUI/src/org/mongkie/ui/im/Bundle.properties
+++ b/InteractionManagerUI/src/org/mongkie/ui/im/Bundle.properties
@@ -2,8 +2,12 @@ OpenIDE-Module-Name=InteractionManager UI
 InteractionsControlPanel.headerImg.text=
 SourcePanel.keyLabel.text=Key:
 SourcePanel.interactionNameLink.text=
-InteractionsControlPanel.linkAllButton.text=Link all..
-InteractionsControlPanel.unlinkAllButton.text=Unlink all..
-SourcePanel.interactionLinkButton.toolTipText=Query interactions between all nodes and add them into the network
-SourcePanel.interactionLinkButton.linked.toolTipText=Remove interactions between the all nodes from the network
+InteractionsControlPanel.linkAllButton.text=Check all..
+InteractionsControlPanel.unlinkAllButton.text=Uncheck all..
+SourcePanel.interactionLinkButton.toolTipText=Click to add interactions between all nodes
+SourcePanel.interactionLinkButton.linked.toolTipText=Click to remove all interactions
+SourcePanel.interactionLinkButton.partiallyLinked.toolTipText=Some interactions are partially added
 SourcePanel.interactionLinkButton.text=
+SourcePanel.actionMenuButton.toolTipText=Show actions
+SourcePanel.actionMenuButton.text=
+SourcePanel.jButton1.text=
