Presets of layout properties

--- a/LayoutPlugins/src/org/mongkie/layout/plugins/forcedirected/Bundle.properties
+++ b/LayoutPlugins/src/org/mongkie/layout/plugins/forcedirected/Bundle.properties
@@ -1,4 +1,4 @@
-name=Force Directed (Spring)
+name=Force Directed
 description=Layout that positions graph elements based on a physics simulation of interacting forces. By default, nodes repel each other, edges act as springs, and drag forces (similar to air resistance) are applied. The running time of this layout algorithm is the greater of O(N log N) and O(E), where N is the number of nodes and E the number of edges.
 ForceDirected.nbodyForce.gravitationalConstant.name=Gravitational Constant
 ForceDirected.nbodyForce.gravitationalConstant.description=The gravitational constant to use. Nodes will attract each other if this value is positive, and will repel each other if it is negative.
