--- a/LayoutUI/src/org/mongkie/ui/layout/Bundle.properties
+++ b/LayoutUI/src/org/mongkie/ui/layout/Bundle.properties
@@ -18,3 +18,6 @@ LayoutTopComponent.stopButton.tooltip=Stop the algorithm, could take a moment as
 
 LayoutTopComponent.tooltip.speed.displayName=Speed
 LayoutTopComponent.tooltip.quality.displayName=Quality
+
+LayoutTopComponent.status.presetSaved={0} preset "{1}" saved
+LayoutTopComponent.status.presetLoaded={0} preset "{1}" loaded
