Some layouts are in separated thread not in the prefuse ActivityManger thread

--- a/LayoutPlugins/src/org/mongkie/layout/plugins/fruchtermanreingold/Bundle.properties
+++ b/LayoutPlugins/src/org/mongkie/layout/plugins/fruchtermanreingold/Bundle.properties
@@ -1,2 +1,12 @@
 name=Fruchterman-Reingold
-description=Layout implementing the Fruchterman-Reingold algorithm for force-directed placement of graph nodes. The computational complexity of this algorithm is quadratic O(n^2) in the number of nodes, so should only be applied for relatively small graphs, particularly in interactive situations.
+description=Layout implementing the Fruchterman-Reingold algorithm for force-directed placement of graph nodes. Fruchterman-Reingold is a classical layout algorithm, since 1984.
+#description=Layout implementing the Fruchterman-Reingold algorithm for force-directed placement of graph nodes. The computational complexity of this algorithm is quadratic O(n^2) in the number of nodes, so should only be applied for relatively small graphs, particularly in interactive situations.
+
+param.area.name = Area
+param.area.description = The graph size area, for example 1000 for 100 nodes.
+
+param.gravity.name = Gravity
+param.gravity.description = This force attracts all nodes to the center to avoid dispersion of disconnected components.
+
+param.speed.name = Speed
+param.speed.description = Value > 0 default 1 ; increase convergence speed at the price of a precision loss.
