Add a property editor using JSlider

--- a/LayoutPlugins/src/org/mongkie/layout/plugins/fruchtermanreingold/Bundle.properties
+++ b/LayoutPlugins/src/org/mongkie/layout/plugins/fruchtermanreingold/Bundle.properties
@@ -9,4 +9,4 @@ param.gravity.name = Gravity
 param.gravity.description = This force attracts all nodes to the center to avoid dispersion of disconnected components.
 
 param.speed.name = Speed
-param.speed.description = Value > 0 default 1 ; increase convergence speed at the price of a precision loss.
+param.speed.description = Increase convergence speed at the price of a precision loss, default is 2.
