Minor change of enrichment ui

--- a/GOEnrichmentAnalysis/src/org/mongkie/ui/enrichment/go/Bundle.properties
+++ b/GOEnrichmentAnalysis/src/org/mongkie/ui/enrichment/go/Bundle.properties
@@ -14,7 +14,7 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 GoEnrichmentSettingUI.strategeLabel.text=Enrichment strategy:
-GoEnrichmentSettingUI.correctionLabel.text=Multiple testing correction:
+GoEnrichmentSettingUI.correctionLabel.text=Correction method:
 GoEnrichmentSettingUI.pvalueLabel.text=p-value cutoff:
 ReportPanel.selectedTermCountLabel.text=Number of selected GO terms:
 ReportPanel.populationCountLabel.text=Total count of population genes:
