Selection only option is subject to NOT layout BUT model

--- a/LayoutUI/src/org/mongkie/ui/layout/Bundle.properties
+++ b/LayoutUI/src/org/mongkie/ui/layout/Bundle.properties
@@ -22,5 +22,5 @@ LayoutTopComponent.tooltip.quality.displayName=Quality
 LayoutTopComponent.status.presetSaved={0} preset "{1}" saved
 LayoutTopComponent.status.presetLoaded={0} preset "{1}" loaded
 LayoutTopComponent.selectionOnlyButton.toolTipText=Layout only the selected items
-LayoutTopComponent.selectionOnlyButton.toolTipText.notSupported=This layout does not support the selection-only mode
+LayoutTopComponent.selectionOnlyButton.toolTipText.notSupported=<html><font color="red">{0} does not support the selection-only mode</font></html>
 LayoutTopComponent.selectionOnlyButton.text=
