Add a attribute for node id column into the import container

--- a/ImportPlugins/src/org/mongkie/importer/plugins/processor/Bundle.properties
+++ b/ImportPlugins/src/org/mongkie/importer/plugins/processor/Bundle.properties
@@ -1,4 +1,3 @@
-DefaultProcessor.displayName = Create a new display
-DefaultProcessorUI.dialog.title = New display
-AppendProcessor.displayName = Append to current display
-AppendProcessorUI.dialog.title = Append display
+DefaultGraphProcessor.displayName = Create a new display
+MergeGraphProcessor.displayName = Merge into the existing graph
+MergeGraphProcessorUI.dialog.title = Merge graph
