Add an imported graph into the interaction manager

--- a/ImportPlugins/src/org/mongkie/importer/plugins/processor/Bundle.properties
+++ b/ImportPlugins/src/org/mongkie/importer/plugins/processor/Bundle.properties
@@ -1,3 +1,6 @@
 DefaultGraphProcessor.displayName = Create a new display
 MergeGraphProcessor.displayName = Merge into the existing graph
 MergeGraphProcessorUI.dialog.title = Merge graph
+AddGraphInteractionSourceUI.sourceNameLabel.text=Source Name:
+AddGraphInteractionSourceUI.keyColLabel.text=Node Key Column:
+AddGraphInteractionSourceUI.Source\ name.text=
