Now the column chooser of interaction sources is listening changes in the node table

--- a/InteractionManagerUI/src/org/mongkie/ui/im/Bundle.properties
+++ b/InteractionManagerUI/src/org/mongkie/ui/im/Bundle.properties
@@ -10,4 +10,4 @@ SourcePanel.interactionLinkButton.partiallyLinked.toolTipText=Some interactions 
 SourcePanel.interactionLinkButton.text=
 SourcePanel.actionMenuButton.toolTipText=Show actions
 SourcePanel.actionMenuButton.text=
-SourcePanel.jButton1.text=
+SourcePanel.settingButton.text=
