Disable more interactions menu if the key field is not available

--- a/InteractionManagerUI/src/org/mongkie/ui/im/Bundle.properties
+++ b/InteractionManagerUI/src/org/mongkie/ui/im/Bundle.properties
@@ -7,6 +7,7 @@ InteractionsControlPanel.unlinkAllButton.text=Uncheck all..
 SourcePanel.interactionLinkButton.toolTipText=Click to add interactions between all nodes
 SourcePanel.interactionLinkButton.linked.toolTipText=Click to remove all interactions
 SourcePanel.interactionLinkButton.partiallyLinked.toolTipText=Some interactions are partially added
+SourcePanel.interactionLinkButton.disabled.toolTipText=Key column is not available
 SourcePanel.interactionLinkButton.text=
 SourcePanel.actionMenuButton.toolTipText=Show actions
 SourcePanel.actionMenuButton.text=
