Edge visual styles of interaction sources

--- a/InteractionManagerUI/src/org/mongkie/ui/im/Bundle.properties
+++ b/InteractionManagerUI/src/org/mongkie/ui/im/Bundle.properties
@@ -9,6 +9,7 @@ SourcePanel.interactionLinkButton.linked.toolTipText=Click to remove all interac
 SourcePanel.interactionLinkButton.partiallyLinked.toolTipText=Some interactions are partially added
 SourcePanel.interactionLinkButton.disabled.toolTipText=Key column is not available
 SourcePanel.interactionLinkButton.text=
-SourcePanel.actionMenuButton.toolTipText=Show actions
+SourcePanel.actionMenuButton.toolTipText=Show Actions
 SourcePanel.actionMenuButton.text=
 SourcePanel.settingButton.text=
+SourcePanel.settingButton.toolTipText=Settings and Visual Styles
