Presets of visual styles

--- a/VisualizationUI/src/org/mongkie/ui/visualization/options/Bundle.properties
+++ b/VisualizationUI/src/org/mongkie/ui/visualization/options/Bundle.properties
@@ -37,3 +37,5 @@ EdgeSettingPanel.resetAllButton.text=Reset all edge options to default
 EdgeSettingPanel.fontColorButton.text=
 EdgeSettingPanel.fontLabel.text=Font:
 EdgeSettingPanel.hideLabelCheckBox.text=Hide edge labels
+EdgeSettingPanel.presetsButton.text=Presets...
+NodeSettingPanel.presetsButton.text=Presets...
