Export data table to CSV file

--- a/ExportPlugins/src/org/mongkie/exporter/plugins/graph/Bundle.properties
+++ b/ExportPlugins/src/org/mongkie/exporter/plugins/graph/Bundle.properties
@@ -1,5 +1,4 @@
-ExporterOptionUICSV.printHeaderCheckBox.text=Print table headers
-ExporterOptionUICSV.selectTableLabel.text=Select a table to export
-ExporterOptionUICSV.nodeRadioButton.text=Node
-ExporterOptionUICSV.edgeRadioButton.text=Edge
-ExporterOptionUICSV.optionLabel.text=Option
+ExporterSettingUICSV.edgeRadioButton.text=Edge
+ExporterSettingUICSV.printHeaderCheckBox.text=Print table headers
+ExporterSettingUICSV.selectTableLabel.text=Select a table to export:
+ExporterSettingUICSV.nodeRadioButton.text=Node
