--- a/ExportUI/src/org/mongkie/ui/exporter/Bundle.properties
+++ b/ExportUI/src/org/mongkie/ui/exporter/Bundle.properties
@@ -1,7 +1,7 @@
 OpenIDE-Module-Display-Category=Mongkie UI
 OpenIDE-Module-Name=Export UI
 OpenIDE-Module-Short-Description=Integrated desktop UI for exporters
-GraphExportSettingUI.fullRadioButton.text=Full
-GraphExportSettingUI.selectedOnlyRadioButton.text=Selected only
-GraphExportSettingUI.labelSelectedOnly.text=Sub-graph of only the current selected nodes is exported
-GraphExportSettingUI.labelFullGraph.text=The complete graph is exported
+GraphExportGlobalSettingUI.selectedOnlyRadioButton.text=Selected only
+GraphExportGlobalSettingUI.fullRadioButton.text=Full
+GraphExportGlobalSettingUI.labelSelectedOnly.text=Sub-graph of only the current selected nodes is exported
+GraphExportGlobalSettingUI.labelFullGraph.text=The complete graph is exported
