--- a/SeriesDataUI/src/org/mongkie/ui/series/importer/Bundle.properties
+++ b/SeriesDataUI/src/org/mongkie/ui/series/importer/Bundle.properties
@@ -1,3 +1,3 @@
-SeriesImporterSettingUI.keyFieldLabel.text=Key Field:
-SeriesImporterSettingUI.keyFieldExplainLabel.text=* The first column of a CSV file will be mapped to the Key field in the network
-SeriesImporterSettingUI.headerRecordCheckBox.text=The first line in a CSV file contains field names
+SeriesImporterSettingUI.keyFieldLabel.text=Key column to map:
+SeriesImporterSettingUI.keyFieldExplainLabel.text=* The first column of a CSV file will be mapped to the key column in the network
+SeriesImporterSettingUI.headerRecordCheckBox.text=First line in the file contains header names
