Unstable codes are committed

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -61,8 +61,7 @@ modules=\
     ${project.org.mongkie.vm.plugins}:\
     ${project.org.mongkie.ui.im}:\
     ${project.org.mongkie.im}:\
-    ${project.org.mongkie.mimi}:\
-    ${project.org.mongkie.filter}
+    ${project.org.mongkie.mimi}
 project.org.mongkie.api.datatable=DataTableAPI
 project.org.mongkie.clustering=ClusteringAPI
 project.org.mongkie.clustering.plugin=ClusteringPlugins
@@ -72,7 +71,6 @@ project.org.mongkie.enrichment.go=GOEnrichmentAnalysis
 project.org.mongkie.enrichment.pathway=PathwayEnrichmentAnalysis
 project.org.mongkie.exporter=ExportAPI
 project.org.mongkie.exporter.plugins=ExportPlugins
-project.org.mongkie.filter=FilterAPI
 project.org.mongkie.gic=GeneIDConverterAPI
 project.org.mongkie.gobean=GoBeanAPI
 project.org.mongkie.im=InteractionManagerAPI
