--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@
 /InteractionManagerAPI/nbproject/private/
 /MiMI/nbproject/private/
 /MiMI/build/
+/FilterAPI/build/
+/FilterAPI/nbproject/private/
