Context UI for visibility and groups

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,6 @@
 /MiMI/build/
 /FilterAPI/build/
 /FilterAPI/nbproject/private/
+/ContextAPI/build/
+/ContextAPI/nbproject/private/
+/JFreeChartLibrary/build/
