--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -62,10 +62,13 @@ modules=\
     ${project.org.mongkie.ui.im}:\
     ${project.org.mongkie.im}:\
     ${project.org.mongkie.mimi}:\
-    ${project.org.mongkie.filter}
+    ${project.org.mongkie.filter}:\
+    ${project.org.mongkie.context}:\
+    ${project.org.mongkie.lib.jfreechart}
 project.org.mongkie.api.datatable=DataTableAPI
 project.org.mongkie.clustering=ClusteringAPI
 project.org.mongkie.clustering.plugin=ClusteringPlugins
+project.org.mongkie.context=ContextAPI
 project.org.mongkie.desktop.branding=DesktopBranding
 project.org.mongkie.enrichment=EnrichmentAnalysisAPI
 project.org.mongkie.enrichment.go=GOEnrichmentAnalysis
@@ -88,6 +91,7 @@ project.org.mongkie.lib.epsgraphics=EPSGraphicsLibrary
 project.org.mongkie.lib.flamingo=FlamingoLibrary
 project.org.mongkie.lib.heatmap=HeatMapLibrary
 project.org.mongkie.lib.javacsv=JavaCSVLibrary
+project.org.mongkie.lib.jfreechart=JFreeChartLibrary
 project.org.mongkie.lib.lucene=LuceneLibrary
 project.org.mongkie.lib.prefuse=PrefuseLibrary
 project.org.mongkie.lib.swingx=SwingXLibrary
