UI fixed for Windows

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,5 @@
 /ContextAPI/build/
 /ContextAPI/nbproject/private/
 /JFreeChartLibrary/build/
+/VisualMappingUI/nbproject/private/
+/VisualMappingPlugins/nbproject/private/
