--- a/KOPathVisualizationUI/src/org/mongkie/ui/kopath/search/Bundle.properties
+++ b/KOPathVisualizationUI/src/org/mongkie/ui/kopath/search/Bundle.properties
@@ -4,7 +4,7 @@ GeneIDSearchPanel.geneIdInputLabel.text=Paste gene ids to search:
 PathwayNameSearchPanel.searchField.toolTipText=Providing auto complete
 PathwayNameSearchPanel.searchField.text=
 GeneIDSearchPanel.searchButton.text=Search
-GeneIDSearchPanel.gicLink.text=Paste using gene id converter
+GeneIDSearchPanel.gicLink.text=Paste using the Gene ID Converter
 PathwayNameSearchPanel.searchButton.text=Search
 GeneIDSearchPanel.geneIdInputArea.text=
 GeneIDSearchPanel.exampleButton.text=
