--- a/VisualMappingPlugins/src/org/mongkie/ui/vm/ranking/transformer/Bundle.properties
+++ b/VisualMappingPlugins/src/org/mongkie/ui/vm/ranking/transformer/Bundle.properties
@@ -21,8 +21,8 @@ ColorTransformerPanel.labelColor.text=Color
 ColorTransformerPanel.palettePopup.default = Palettes
 ColorTransformerPanel.palettePopup.invert = Invert
 ColorTransformerPanel.palettePopup.recent = Recently Used
-SizeTransformerPanel.labelMinSize.text=Min size:
-SizeTransformerPanel.labelMaxSize.text=Max size:
+SizeTransformerPanel.labelMinSize.text=Min:
+SizeTransformerPanel.labelMaxSize.text=Max:
 SizeTransformerPanel.labelRange.text=Range
 SizeTransformerPanel.upperBoundLabel.text=NaN
 SizeTransformerPanel.lowerBoundLabel.text=NaN
