--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -123,3 +123,4 @@ project.license=mongkie
 project.org.mongkie.visualmap=VisualMappingAPI
 project.org.mongkie.vm.plugins=VisualMappingPlugins
 project.org.netbeans.libs.junit4=JUnit4Library
+run.args.extra=--locale EN
