Force locale to EN

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -123,4 +123,5 @@ project.license=mongkie
 project.org.mongkie.visualmap=VisualMappingAPI
 project.org.mongkie.vm.plugins=VisualMappingPlugins
 project.org.netbeans.libs.junit4=JUnit4Library
-run.args.extra=--locale EN
+run.args.extra=--locale en -J-Xms256m -J-Xmx1024m
+app.conf=nbproject/mongkie.conf
