Nodes and edges visual style setting UI fixes

--- a/VisualizationUI/src/org/mongkie/ui/visualization/options/Bundle.properties
+++ b/VisualizationUI/src/org/mongkie/ui/visualization/options/Bundle.properties
@@ -22,8 +22,8 @@ GlobalSettingPanel.resetAllButton.text=Reset all gobal options to default
 NodeSettingPanel.shapeLabel.text=Shape:
 NodeSettingPanel.fontLabel.text=Font:
 NodeSettingPanel.fontColorButton.text=
-NodeSettingPanel.fillColorLabel.text=Fill color:
-NodeSettingPanel.borderColorLabel.text=Border color:
+NodeSettingPanel.fillColorLabel.text=Fill Color:
+NodeSettingPanel.borderColorLabel.text=Border Color:
 NodeSettingPanel.fillColorButton.text=
 NodeSettingPanel.borderColorButton.text=
 NodeSettingPanel.sizeLabel.text=Size:
