Context UI fixes

--- a/ContextUI/src/org/mongkie/ui/context/Bundle.properties
+++ b/ContextUI/src/org/mongkie/ui/context/Bundle.properties
@@ -4,8 +4,8 @@ HINT_ContextTopComponent=Context View
 OpenIDE-Module-Display-Category=Mongkie UI
 OpenIDE-Module-Name=Context UI
 OpenIDE-Module-Short-Description=Contextual information about the current network
-VisibilityContextPanel.jXTitledSeparator2.title=Edges
-VisibilityContextPanel.jXTitledSeparator1.title=Nodes
 VisibilityContextPanel.nodesCountInfoLabel.text=NA
 VisibilityContextPanel.edgesCountInfoLabel.text=NA
 GroupListView.screenshot.errorMsg = An error occured while taking screenshot.\n\nException: {0}: {1}\nFile: {2}\nLine: {3}
+VisibilityContextPanel.edgesTitledSeparator.title=Edges
+VisibilityContextPanel.nodesTitledSeparator.title=Nodes
