Upgrade NetBeans Platform to version 7.3

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@
 /JFreeChartLibrary/build/
 /VisualMappingUI/nbproject/private/
 /VisualMappingPlugins/nbproject/private/
+/JUnit4Library/nbproject/private/
