--- a/nbproject/platform.properties
+++ b/nbproject/platform.properties
@@ -28,10 +28,10 @@ disabled.modules=\
     org.eclipse.mylyn.bugzilla.core,\
     org.eclipse.mylyn.commons.core,\
     org.eclipse.mylyn.commons.net,\
+    org.eclipse.mylyn.commons.repositories.core,\
     org.eclipse.mylyn.commons.xmlrpc,\
     org.eclipse.mylyn.tasks.core,\
     org.jdesktop.layout,\
-    org.mozilla.rhino.patched,\
     org.netbeans.api.debugger,\
     org.netbeans.api.java.classpath,\
     org.netbeans.api.search,\
@@ -39,6 +39,7 @@ disabled.modules=\
     org.netbeans.api.web.webmodule,\
     org.netbeans.api.xml,\
     org.netbeans.core.browser,\
+    org.netbeans.core.browser.webview,\
     org.netbeans.core.execution,\
     org.netbeans.core.ide,\
     org.netbeans.core.io.ui,\
@@ -57,20 +58,25 @@ disabled.modules=\
     org.netbeans.libs.felix,\
     org.netbeans.libs.freemarker,\
     org.netbeans.libs.git,\
+    org.netbeans.libs.glassfish.sdk,\
     org.netbeans.libs.glassfish_logging,\
     org.netbeans.libs.ini4j,\
+    org.netbeans.libs.json_simple,\
     org.netbeans.libs.jsr223,\
     org.netbeans.libs.jvyamlb,\
     org.netbeans.libs.lucene,\
+    org.netbeans.libs.nashorn,\
     org.netbeans.libs.osgi,\
     org.netbeans.libs.smack,\
     org.netbeans.libs.svnClientAdapter,\
     org.netbeans.libs.svnClientAdapter.javahl,\
     org.netbeans.libs.svnClientAdapter.svnkit,\
     org.netbeans.libs.swingx,\
+    org.netbeans.libs.testng,\
     org.netbeans.libs.xerces,\
     org.netbeans.modules.apisupport.restsample,\
     org.netbeans.modules.applemenu,\
+    org.netbeans.modules.autoupdate.cli,\
     org.netbeans.modules.autoupdate.services,\
     org.netbeans.modules.autoupdate.ui,\
     org.netbeans.modules.bugtracking,\
@@ -83,6 +89,7 @@ disabled.modules=\
     org.netbeans.modules.csl.api,\
     org.netbeans.modules.css.editor,\
     org.netbeans.modules.css.lib,\
+    org.netbeans.modules.css.model,\
     org.netbeans.modules.css.visual,\
     org.netbeans.modules.db,\
     org.netbeans.modules.db.core,\
@@ -103,6 +110,7 @@ disabled.modules=\
     org.netbeans.modules.editor.actions,\
     org.netbeans.modules.editor.bookmarks,\
     org.netbeans.modules.editor.bracesmatching,\
+    org.netbeans.modules.editor.breadcrumbs,\
     org.netbeans.modules.editor.codetemplates,\
     org.netbeans.modules.editor.completion,\
     org.netbeans.modules.editor.deprecated.pre65formatting,\
@@ -128,7 +136,7 @@ disabled.modules=\
     org.netbeans.modules.el.lexer,\
     org.netbeans.modules.extbrowser,\
     org.netbeans.modules.extexecution,\
-    org.netbeans.modules.extexecution.destroy,\
+    org.netbeans.modules.extexecution.impl,\
     org.netbeans.modules.favorites,\
     org.netbeans.modules.git,\
     org.netbeans.modules.glassfish.common,\
@@ -142,6 +150,7 @@ disabled.modules=\
     org.netbeans.modules.html.editor,\
     org.netbeans.modules.html.editor.lib,\
     org.netbeans.modules.html.lexer,\
+    org.netbeans.modules.html.navigator,\
     org.netbeans.modules.html.parser,\
     org.netbeans.modules.html.validation,\
     org.netbeans.modules.httpserver,\
@@ -180,10 +189,8 @@ disabled.modules=\
     org.netbeans.modules.javaee.beanvalidation,\
     org.netbeans.modules.javaee.specs.support,\
     org.netbeans.modules.javahelp,\
-    org.netbeans.modules.javascript.editing,\
-    org.netbeans.modules.javascript.hints,\
-    org.netbeans.modules.javascript.kit,\
-    org.netbeans.modules.javascript.refactoring,\
+    org.netbeans.modules.javascript2.editor,\
+    org.netbeans.modules.javascript2.kit,\
     org.netbeans.modules.jellytools.enterprise,\
     org.netbeans.modules.jellytools.ide,\
     org.netbeans.modules.jsp.lexer,\
@@ -201,7 +208,9 @@ disabled.modules=\
     org.netbeans.modules.maven.jaxws,\
     org.netbeans.modules.maven.samples,\
     org.netbeans.modules.mercurial,\
+    org.netbeans.modules.mylyn.util,\
     org.netbeans.modules.netbinox,\
+    org.netbeans.modules.netserver,\
     org.netbeans.modules.options.editor,\
     org.netbeans.modules.options.keymap,\
     org.netbeans.modules.parsing.api,\
@@ -254,6 +263,8 @@ disabled.modules=\
     org.netbeans.modules.versioning.ui,\
     org.netbeans.modules.versioning.util,\
     org.netbeans.modules.web.beans,\
+    org.netbeans.modules.web.browser.api,\
+    org.netbeans.modules.web.client.rest,\
     org.netbeans.modules.web.common,\
     org.netbeans.modules.web.core,\
     org.netbeans.modules.web.core.syntax,\
@@ -281,6 +292,7 @@ disabled.modules=\
     org.netbeans.modules.web.project,\
     org.netbeans.modules.web.refactoring,\
     org.netbeans.modules.web.struts,\
+    org.netbeans.modules.web.webkit.debugging,\
     org.netbeans.modules.websvc.clientapi,\
     org.netbeans.modules.websvc.core,\
     org.netbeans.modules.websvc.customization,\
