Update Flamingo library to 7.2.1

--- a/FlamingoLibrary/nbproject/project.properties
+++ b/FlamingoLibrary/nbproject/project.properties
@@ -1,1 +1,3 @@
 is.autoload=true
+javadoc.reference.flamingo-7.2.1.jar=nbproject/flamingo-7.2.1-javadoc.jar
+source.reference.flamingo-7.2.1.jar=nbproject/flamingo-7.2.1-sources.jar
