--- a/FlamingoLibrary/src/org/mongkie/lib/flamingo/Bundle.properties
+++ b/FlamingoLibrary/src/org/mongkie/lib/flamingo/Bundle.properties
@@ -1,8 +1,8 @@
 OpenIDE-Module-Display-Category=Libraries
 OpenIDE-Module-Long-Description=\
     Flamingo provides a Swing implementation of the Office 2007 ribbon container and related components. \
-    This build had been made for Insubstantial 6.3 Release which is a maintenance fork of some of Kirill Grouchnikov's swing based projects. \
+    This build had been made for Insubstantial which is a maintenance fork of some of Kirill Grouchnikov's swing based projects. \
     Specifically Substance, Trident, Flamingo, and some supporting project. \
-    Visit http://shemnon.com/speling/ for more details.
+    Visit http://insubstantial.posterous.com/ for further information.
 OpenIDE-Module-Name=Flamingo Library
-OpenIDE-Module-Short-Description=Flamingo 6.3 wrapped library
+OpenIDE-Module-Short-Description=Insubstantial Flamingo library
