--- a/SwingXLibrary/src/org/mongkie/lib/swingx/Bundle.properties
+++ b/SwingXLibrary/src/org/mongkie/lib/swingx/Bundle.properties
@@ -1,5 +1,6 @@
 OpenIDE-Module-Display-Category=Libraries
 OpenIDE-Module-Long-Description=\
-    SwingX(http://wiki.java.net/bin/view/Javadesktop/SwingLabsSwingX) UI Library
+    SwingX contains extensions to the Swing GUI toolkit, including new and enhanced components that provide functionality commonly required by rich client applications. \
+    Visit http://java.net/projects/swingx for further information.
 OpenIDE-Module-Name=SwingX Library
-OpenIDE-Module-Short-Description=SwingX UI Library
+OpenIDE-Module-Short-Description=SwingLabs Swing Component Extensions
