Remove the "Name" column of data table's OutlineView

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,10 @@
 /VisualMappingUI/nbproject/private/
 /VisualMappingPlugins/nbproject/private/
 /JUnit4Library/nbproject/private/
+/EnrichmentAnalysisUI/nbproject/private/
+/DesktopBranding/nbproject/private/
+/DataTableAPI/nbproject/private/
+/DataTableUI/nbproject/private/
+/ImportUI/nbproject/private/
+/FlamingoLibrary/nbproject/private/
+/SwingXLibrary/nbproject/private/
